--- a/SneakySignal/Views/Shared/_Layout.cshtml
+++ b/SneakySignal/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
     </div>
 
     <div class="container body-content">
+        <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/jquery.signalR-2.1.2.min.js"></script>
+        <script src='/signalr/js'></script>
         @RenderBody()
         <hr />
         <footer>
@@ -34,7 +38,6 @@
         </footer>
     </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    
 </body>
 </html>
