--- a/SneakySignal/Views/Shared/_Layout.cshtml
+++ b/SneakySignal/Views/Shared/_Layout.cshtml
@@ -29,8 +29,11 @@
     <div class="container body-content">
         <script src="~/Scripts/jquery-1.10.2.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
         <script src="~/Scripts/jquery.signalR-2.1.2.min.js"></script>
         <script src='/signalr/js'></script>
+        <script src="~/Scripts/PageScript/DesktopApp.js"></script>
+        <script src="~/Scripts/PageScript/MobileApp.js"></script>
         @RenderBody()
         <hr />
         <footer>
