--- a/SneakySignal/Views/Shared/_Layout.cshtml
+++ b/SneakySignal/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
 
     <div class="container body-content">
         <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+        <script src="~/Scripts/qrcode.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
         <script src="~/Scripts/jquery.signalR-2.1.2.min.js"></script>
