Add basic deviceorientation event

--- a/SneakySignal/Views/Home/Mobile.cshtml
+++ b/SneakySignal/Views/Home/Mobile.cshtml
@@ -4,7 +4,9 @@
 }
 
 <h2>Mobile</h2>
-<button id="notify">test</button>
+<label >alpha:</label><span id="alpha">0</span>
+<label >beta:</label><span id="beta">0</span>
+<label >gama:</label><span id="gama">0</span>
 
 <script>
     var app;
