--- a/SneakySignal/Views/Home/Desktop.cshtml
+++ b/SneakySignal/Views/Home/Desktop.cshtml
@@ -10,7 +10,7 @@
 <script>
     var app;
     $(document).ready(function() {
-        app = DesktopApp('#connectUrl', 'qrcode');
+        app = DesktopApp('#connectUrl', '#qrcode');
         app.init();
     });
 </script>
