--- a/SneakySignal/Views/Home/Desktop.cshtml
+++ b/SneakySignal/Views/Home/Desktop.cshtml
@@ -7,6 +7,10 @@
 <h3 id="connectUrl"></h3>
 <div id="qrcode"></div>
 
+<label >alpha:</label><span id="alpha">no</span>
+<label >beta:</label><span id="beta">no</span>
+<label >gama:</label><span id="gamma">no</span>
+
 <script>
     var app;
     $(document).ready(function() {
