--- a/SneakySignal/Views/Home/Mobile.cshtml
+++ b/SneakySignal/Views/Home/Mobile.cshtml
@@ -6,7 +6,7 @@
 <h2>Mobile</h2>
 <label >alpha:</label><span id="alpha">0</span>
 <label >beta:</label><span id="beta">0</span>
-<label >gama:</label><span id="gama">0</span>
+<label >gama:</label><span id="gamma">0</span>
 
 <script>
     var app;
