--- a/SneakySignal/Views/Home/Mobile.cshtml
+++ b/SneakySignal/Views/Home/Mobile.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Mobile";
 }
 
-<h2>Mobile</h2>
+
+
+<h2 id="status">Mobile</h2>
 <label >alpha:</label><span id="alpha">0</span>
 <label >beta:</label><span id="beta">0</span>
 <label >gama:</label><span id="gamma">0</span>
