--- a/SneakySignal/Views/Shared/_Layout.cshtml
+++ b/SneakySignal/Views/Shared/_Layout.cshtml
@@ -9,24 +9,7 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         <script src="~/Scripts/jquery-1.10.2.min.js"></script>
         <script src="~/Scripts/qrcode.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
@@ -36,10 +19,6 @@
         <script src="~/Scripts/PageScript/DesktopApp.js"></script>
         <script src="~/Scripts/PageScript/MobileApp.js"></script>
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
 
     
