--- a/SneakySignal/Views/Home/Desktop.cshtml
+++ b/SneakySignal/Views/Home/Desktop.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Desktop";
 }
 
-<h3 id="connectUrl"></h3>
+@*<h3 id="connectUrl"></h3>*@
 
 <div class="row">
     <div class="col-md-2 col-md-offset-5">
         <div  id="qrcode"></div>
-        <canvas id="myCanvas" width="360" height="450" style="border:1px solid #d3d3d3;" hidden="hidden">
+        <canvas id="myCanvas" width="360" height="450" hidden="hidden">
 </canvas>
     </div>
 </div>
