--- a/SneakySignal/Views/Home/Mobile.cshtml
+++ b/SneakySignal/Views/Home/Mobile.cshtml
@@ -17,7 +17,7 @@
 <script>
     var app;
     $(document).ready(function() {
-        app = MobileApp('@Model.ConnectionId', '#status');
+        app = MobileApp('@Model.ConnectionId', 'status');
         app.init();
     });
 </script>
